--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html">Lasagna</a>
-    
+    <ul>
+    <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+    <li><a href="./recipes/flankSteak.html">Marinated Flank Steak</a></li>
+    <li><a href="./recipes/miso-soup.html">Miso Soup</a></li>
+    </ul>
 </body>
 </html>
