--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Odin Recipes</title>
 </head>
 <body>
@@ -11,10 +12,10 @@
 
     <img src="../img/lasagna.jpeg">
 
-    <h2>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</h2>
+    <h2 class="subhead">This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</h2>
 
 
-    <p>When John Chandler submitted this lasagna recipe to Allrecipes more than 20 years ago,
+    <p class="offwhite">When John Chandler submitted this lasagna recipe to Allrecipes more than 20 years ago,
         he had no idea how successful it would become.
         One of our top-performing recipes of all time,
         World's Best Lasagna racks up more than 7 million views per year 
